# emet

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  domains.md  quickstart.md
examples/: attention_stress_test.py  condensation.py  ihara_rh_verification.py  mexican_hat_theorem.py  modular_cusp_rh.py  prediction.py  quantum_channel.py  ramanujan_spectral_isolation.py  return_bound.py  rg_flow.py  semantic_threshold.py  squeeze_argument.py  weil_markov_bridge.py  yang_mills_4d_construction.py  yang_mills_mass_gap.py
lean/: Emet.lean  lake-manifest.json  lakefile.lean
oracle/: check.py  generate.py  manifest.json
oracle/cases/: branch-a-001.json  branch-c-sub-001.json  branch-c-sup-001.json  screening-001.json
python/emet/: __init__.py  certificate.py  cli.py  portrait.py  store.py
python/tests/: test_adm_flrw.py  test_attention_transition.py  test_core.py  test_domains.py  test_ising_block_spin.py  test_kahan.py  test_lattice.py  test_mexican_hat_theorem.py  test_omission_exponent.py  test_portrait.py  test_quantum_channel.py  test_ramanujan.py  test_schumann.py  test_store.py  test_surgery.py  test_torus.py  test_torus_4d.py  test_weil_explicit.py  test_yang_mills.py  test_yang_mills_sun.py  test_yang_mills_torus_agreement.py
src/: input.rs  lib.rs  main.rs  partition.rs  ramanujan.rs  reduction.rs  report.rs
tests/: cli.rs
tests/fixtures/: pre_admissible.json  subcritical.json  (+2 more)
(+60 files in other folders)
