[package]
name = "emet"
version = "1.0.0"
edition = "2024"
description = "Given a split, compute chi and interpret it."
license = "MIT"
repository = "https://github.com/EmetLabsReal/emet"
readme = "README.md"

[features]
default = ["python"]
python = ["dep:pyo3"]

[lib]
name = "_emet"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "emet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
pyo3 = { version = "0.23.4", optional = true, features = ["abi3-py310", "extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sprs = { version = "0.11.4", features = ["serde"] }
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
