[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "emet"
version = "1.0.0"
description = "Given a split, compute chi and interpret it."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/EmetLabsReal/emet"
Repository = "https://github.com/EmetLabsReal/emet"
Issues = "https://github.com/EmetLabsReal/emet/issues"

[tool.maturin]
python-source = "python"
module-name = "emet._emet"
features = ["python"]
